<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Togo</string>
    <string name="hints">country</string>
    <string name="hintb">mobile Number</string>
    <string name="btnwel">Continue</string>
    <string name="text">Message</string>
    <string name="hint">Type message here!</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/people</item>
        <item>@drawable/photo</item>
        <item>@drawable/communities</item>
        <item>@drawable/pages</item>
        <item>@drawable/whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>




    <string name="reg">REGISTER</string>
    <string name="full">Full Name</string>
    <string name="email">Email</string>
    <string name="paso">Password</string>
    <string name="btnreg">Register</string>

    <string name="mail">Email</string>
    <string name="pa">Password</string>
    <string name="btnlog">Login</string>
    <string name="btnlogin">I do not have an account.Register me!</string>
    <string name="log">LOGIN</string>
    <string name="chbox">Show password</string>
    <string name="mes">Already registered.Log Me in!</string>

</resources>
