<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/togo" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dip" >
        <!--  View Title Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/log"
                android:typeface="serif"
                android:textSize="25dip"
                android:textStyle="bold" />
        <!--  Email Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:text="@string/mail" />
        <!--  Email TextField -->
        <EditText
                android:id="@+id/loginEmail"
                android:layout_width="fill_parent"
                android:background="@drawable/edittext_style"
                android:layout_height="wrap_content" />

        <!--  Password Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:typeface="serif"
                android:text="@string/pa" />
        <!--  Password TextField -->
        <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:background="@drawable/edittext_style"
                android:layout_height="wrap_content"
                android:password="true" />

        <!--  Error message -->
        <TextView android:id="@+id/login_error"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#e30000"
                  android:typeface="serif"
                  android:padding="10dip"
                  android:textStyle="bold"/>


        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chbox"
                android:typeface="serif"
                android:id="@+id/checkBox"/>

        <!--  Login Button -->
        <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="20dip"
                android:background="@drawable/button_style"
                android:text="@string/btnlog"
                android:typeface="serif"/>

        <!--  Link to Registration Screen -->
        <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btnlogin"
                android:textColor="#21dbd4"
                android:textStyle="bold" />
    </LinearLayout>

</ScrollView>